--- a/Day1.Tests/Day1.Tests.csproj
+++ b/Day1.Tests/Day1.Tests.csproj
@@ -71,7 +71,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Mocking.cs" />
+    <Compile Include="TestHelper.cs" />
     <Compile Include="RoutingTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
